first draft of vibewar press release

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 
 <head>
 
-  <meta name="robots" content="noindex">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Conscious Creative</title>
+  <title>Deeper Vibrations: Origin Compilation</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
 
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-  <link href='http://fonts.googleapis.com/css?family=Cantora+One' rel='stylesheet' type='text/css'>
+
 
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/main.css">
 
   <script src="js/vendor/modernizr-2.6.2.min.js"></script>
@@ -53,10 +53,80 @@ $('.linkting').fadeIn();
 </script>
 </head>
 <body>
-
+<div id="container">
 <!--
 <p class="linkting" style="display:none;">Downloading...</p>
 -->
-<p class="linkting" style="display:none;">Sorry, download expired...Please contact oli @ DV for a copy of the file.</p>
-  </body>
+<p class="linkting" style="display:none;">V I B E W A R!!!</p>
+<h1>Deeper Vibrations - Origin Compilation  (DVOC001)</h1>
+<div class="row">
+  <div class="col-md-4">
+    <img src="img/artwork_final_small.png" class="artwork" width="200" height="200">
+    </div>
+  <div class="col-md-8">
+    <table class="table table-bordered table-condensed releasedetails">
+    <tbody>
+    <tr><td>Title:</td>    <td>Origin Compilation</td></tr>
+    <tr><td>Label:</td>    <td>Deeper Vibrations</td></tr>
+    <tr><td>Release date:</td> <td>March 17th 2014</td></tr>
+    <tr><td>Price:</td>    <td>£6.99</td></tr>
+    <tr><td>Cat No:</td> <td>DVC100</td></tr>
+    <tr><td>Format:</td>   <td>Digital</td></tr>
+    <tr><td>Mastered by:</td>  <td>Ten Eight Seven Mastering</td></tr>
+    </tbody>
+  </table>
+  </div>
+</div>
+<div class="row" style="clear:both;">
+  <p>Deeper Vibrations is proud to announce their first release in aid of charity, entitled 'Origin Compilation’.</p>
+
+  <p>All tracks on the compilation were chosen from the 'VibeWar' with help from our followers. The VibeWar was a competition that took place between artists within the bass-music scene, who battled it out to create the most beautiful piece of music possible. With so many people enjoying the music created through the VibeWar, Deeper Vibrations saw potential to further the positive effects by creating a compilation, which in turn could help raise money for victims of real wars throughout the world after all music is the universal language of all mankind.</p>
+
+  <p>The artists involved generously donated their music to the cause, coming together to produce an outstanding compilation, with a unique mix of inspiring music, with a strong emphasis on bass. The release features a range of artists from established producers, to new talent.</p>
+
+  <p>Deeper Vibrations wanted to help children who through no choice of their own have grown up in a world surrounded by war and conflict. All proceeds are going to WarChild’s programme in Syria, Iraq, Afghanistan, Central African Republic, DR Congo and Uganda.</p>
+  <div class="tracklist">
+  <h4>Album Tracklist:</h4>
+    <p>Menik Feat Zelda Marshal & Emma Lin - Contact <br/>
+    Anex - Trial & Error<br/>
+    Mentha - Sunflower<br/>
+    J.Sparrow - Vibewar Beat<br/>
+    Karnage & Mark IV - Solitude feat Erika Roxin<br/>
+    Trashbat - Eager Beaver<br/>
+    DTR - Bludclot<br/>
+    Tosti - Grow <br/>
+    Morrison - Uptown<br/>
+    Vaun - Ruling Out The Impossible<br/>
+    VoloDM - Alpharius<br/>
+    Rozi - Don't Forget It<br/>
+    Love The Cook - This One <br/>
+    Dillard - Waiting<br/>
+    Jeph1 - Cloudwalk<br/>
+    Duckem & Andromeda S. - Awake<br/></p>
+    </div>
+  </div>
+<div class="row">
+  <div class="footer">
+
+    <button class="btn"><span class="glyphicon glyphicon-download">Download PDF</span></button>
+    <button class="btn"><span class="glyphicon glyphicon-music">View Release on Bandcamp</span></button>
+    <ul class="icons">
+          
+         <li>  <a class="facebook social" href="http://www.facebook.com/deepervibrations" target="_blank"></a>
+        </li> 
+         <li>  <a class="twitter social" href="http://www.twitter.com/deep_vibrations" target="_blank"></a>
+        </li>
+        <li>  <a class="soundcloud social" href="http://www.soundcloud.com/deepervibrations" target="_blank"></a>
+        </li>
+        <li>  <a class="youtube social" href="http://www.youtube.com/deepervibrations" target="_blank"></a>
+        </li>
+        </li><a class="googleplus social" href="https://plus.google.com/+DeeperVibrations" rel="publisher"></a>
+        </li>
+      </ul>
+        <p class="address">Deeper Vibrations  |  Redwing, Cusop, Hay-on-Wye, Herefordshire. HR3 5RF  |  Tel: 07581 700 300  |  www.deepervibrations.com</p>
+    </div>
+</div>
+
+</div>
+</body>
 </html>
