--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 
-
-<!-- why you be readin' my code?... yes I will tweak it soon, gimme a chance!-->
-
+<!-- This line is reserved to wish Peace Love and Happiness to All!-->
 
 <head>
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Deeper Vibrations: Origin Compilation</title>
+  <title>Deeper Vibrations: Origin</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
 
@@ -23,10 +21,9 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/main.css">
-
+<!--
   <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-  <script src="js/snow.js"></script>
-  <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+  <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>-->
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.7.1.min.js"><\/script>')</script>
 
 <script type="text/javascript">
@@ -59,11 +56,9 @@ $('.linkting').fadeIn();
 -->
 <p class="linkting" style="display:none;">V I B E W A R!!!</p>
 <h1>Deeper Vibrations - Origin Compilation  (DVOC001)</h1>
-<div class="row">
-  <div class="col-md-4">
+<div class="summary">
     <img src="img/artwork_final_small.png" class="artwork" width="200" height="200">
-    </div>
-  <div class="col-md-8">
+  
     <table class="table table-bordered table-condensed releasedetails">
     <tbody>
     <tr><td>Title:</td>    <td>Origin Compilation</td></tr>
@@ -76,15 +71,15 @@ $('.linkting').fadeIn();
     </tbody>
   </table>
   </div>
-</div>
-<div class="row" style="clear:both;">
+
+<div class="row maintext">
   <p>Deeper Vibrations is proud to announce their first release in aid of charity, entitled 'Origin Compilation’.</p>
 
   <p>All tracks on the compilation were chosen from the 'VibeWar' with help from our followers. The VibeWar was a competition that took place between artists within the bass-music scene, who battled it out to create the most beautiful piece of music possible. With so many people enjoying the music created through the VibeWar, Deeper Vibrations saw potential to further the positive effects by creating a compilation, which in turn could help raise money for victims of real wars throughout the world after all music is the universal language of all mankind.</p>
 
   <p>The artists involved generously donated their music to the cause, coming together to produce an outstanding compilation, with a unique mix of inspiring music, with a strong emphasis on bass. The release features a range of artists from established producers, to new talent.</p>
 
-  <p>Deeper Vibrations wanted to help children who through no choice of their own have grown up in a world surrounded by war and conflict. All proceeds are going to WarChild’s programme in Syria, Iraq, Afghanistan, Central African Republic, DR Congo and Uganda.</p>
+  <p>Deeper Vibrations wanted to help children who through no choice of their own have grown up in a world surrounded by war and conflict. All proceeds are going to WarChild’s programme in Syria, Iraq, Afghanistan, Central African Republic, DR Congo and Uganda.</p><br/>
   <div class="tracklist">
   <h4>Album Tracklist:</h4>
     <p>Menik Feat Zelda Marshal & Emma Lin - Contact <br/>
@@ -108,19 +103,19 @@ $('.linkting').fadeIn();
 <div class="row">
   <div class="footer">
 
-    <button class="btn"><span class="glyphicon glyphicon-download">Download PDF</span></button>
-    <button class="btn"><span class="glyphicon glyphicon-music">View Release on Bandcamp</span></button>
+    <button class="btn"><span class="glyphicon glyphicon-download">  Download PDF</span></button>
+    <!--<button class="btn"><span class="glyphicon glyphicon-music">  View Release on Bandcamp</span></button>-->
     <ul class="icons">
-          
-         <li>  <a class="facebook social" href="http://www.facebook.com/deepervibrations" target="_blank"></a>
+         <li>  <a class="youtube social" href="http://www.youtube.com/deepervibrations" target="_blank"></a>
+        </li> 
+         
+        <li>  <a class="soundcloud social" href="http://www.soundcloud.com/deepervibrations" target="_blank"></a>
+        </li>
+        <li>  <a class="facebook social" href="http://www.facebook.com/deepervibrations" target="_blank"></a>
         </li> 
          <li>  <a class="twitter social" href="http://www.twitter.com/deep_vibrations" target="_blank"></a>
         </li>
-        <li>  <a class="soundcloud social" href="http://www.soundcloud.com/deepervibrations" target="_blank"></a>
-        </li>
-        <li>  <a class="youtube social" href="http://www.youtube.com/deepervibrations" target="_blank"></a>
-        </li>
-        </li><a class="googleplus social" href="https://plus.google.com/+DeeperVibrations" rel="publisher"></a>
+        <li><a class="googleplus social" href="https://plus.google.com/+DeeperVibrations" target="_blank"></a>
         </li>
       </ul>
         <p class="address">Deeper Vibrations  |  Redwing, Cusop, Hay-on-Wye, Herefordshire. HR3 5RF  |  Tel: 07581 700 300  |  www.deepervibrations.com</p>
