--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@ $('.linkting').fadeIn();
 <p class="linkting" style="display:none;">Downloading...</p>
 -->
 <p class="linkting" style="display:none;">V I B E W A R!!!</p>
-<h1>Deeper Vibrations - Origin Compilation  (DVOC001)</h1>
+<h1>Deeper Vibrations: Origin (DVO001)</h1>
 <div class="summary">
     <img src="img/artwork_final_small.png" class="artwork" width="200" height="200">
   
     <table class="table table-bordered table-condensed releasedetails">
     <tbody>
-    <tr><td>Title:</td>    <td>Origin Compilation</td></tr>
+    <tr><td>Title:</td>    <td>Origin</td></tr>
     <tr><td>Label:</td>    <td>Deeper Vibrations</td></tr>
-    <tr><td>Release date:</td> <td>March 17th 2014</td></tr>
+    <tr><td>Release date:</td> <td>March 18th 2014</td></tr>
     <tr><td>Price:</td>    <td>£6.99</td></tr>
-    <tr><td>Cat No:</td> <td>DVC100</td></tr>
+    <tr><td>Cat No:</td> <td>DVO001</td></tr>
     <tr><td>Format:</td>   <td>Digital</td></tr>
     <tr><td>Mastered by:</td>  <td>Ten Eight Seven Mastering</td></tr>
     </tbody>
@@ -73,7 +73,7 @@ $('.linkting').fadeIn();
   </div>
 
 <div class="row maintext">
-  <p>Deeper Vibrations is proud to announce their first release in aid of charity, entitled 'Origin Compilation’.</p>
+  <p>Deeper Vibrations is proud to announce their first release in aid of charity, a sixteen track compilation entitled 'Origin'.</p>
 
   <p>All tracks on the compilation were chosen from the 'VibeWar' with help from our followers. The VibeWar was a competition that took place between artists within the bass-music scene, who battled it out to create the most beautiful piece of music possible. With so many people enjoying the music created through the VibeWar, Deeper Vibrations saw potential to further the positive effects by creating a compilation, which in turn could help raise money for victims of real wars throughout the world after all music is the universal language of all mankind.</p>
 
@@ -82,11 +82,11 @@ $('.linkting').fadeIn();
   <p>Deeper Vibrations wanted to help children who through no choice of their own have grown up in a world surrounded by war and conflict. All proceeds are going to WarChild’s programme in Syria, Iraq, Afghanistan, Central African Republic, DR Congo and Uganda.</p><br/>
   <div class="tracklist">
   <h4>Album Tracklist:</h4>
-    <p>Menik Feat Zelda Marshal & Emma Lin - Contact <br/>
+    <p>Menik - Contact featuring Zelda Marshal & Emma Lin<br/>
     Anex - Trial & Error<br/>
     Mentha - Sunflower<br/>
     J.Sparrow - Vibewar Beat<br/>
-    Karnage & Mark IV - Solitude feat Erika Roxin<br/>
+    Karnage & Mark IV - Solitude featuring Erika Roxin<br/>
     Trashbat - Eager Beaver<br/>
     DTR - Bludclot<br/>
     Tosti - Grow <br/>
@@ -103,7 +103,7 @@ $('.linkting').fadeIn();
 <div class="row">
   <div class="footer">
 
-    <button class="btn"><span class="glyphicon glyphicon-download">  Download PDF</span></button>
+    <button class="btn"><a href="deeper_vibrations_origin.pdf" download="deeper_vibrations_origin.pdf"><span class="glyphicon glyphicon-download"> Download PDF</span></a></button>
     <!--<button class="btn"><span class="glyphicon glyphicon-music">  View Release on Bandcamp</span></button>-->
     <ul class="icons">
          <li>  <a class="youtube social" href="http://www.youtube.com/deepervibrations" target="_blank"></a>
@@ -118,7 +118,7 @@ $('.linkting').fadeIn();
         <li><a class="googleplus social" href="https://plus.google.com/+DeeperVibrations" target="_blank"></a>
         </li>
       </ul>
-        <p class="address">Deeper Vibrations  |  Redwing, Cusop, Hay-on-Wye, Herefordshire. HR3 5RF  |  Tel: 07581 700 300  |  www.deepervibrations.com</p>
+        <p class="address">Deeper Vibrations  |  Redwing, Cusop, Hay-on-Wye, Herefordshire. HR3 5RF  |  Tel: 07581 700 300  |  <a href="mailto:admin@deepervibrations.com">admin@deepervibrations.com</a></p>
     </div>
 </div>
 
