updated bg position and removed logo, centred tracklist

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ $('.linkting').fadeIn();
     Love The Cook - This One <br/>
     Dillard - Waiting<br/>
     Jeph1 - Cloudwalk<br/>
-    Duckem & Andromeda S. - Awake<br/></p>
+    Duckem & Andromeda S. - Awake<br/><br/><br/></p>
     </div>
   </div>
 <div class="row">
