fixed sparrow trackname

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ $('.linkting').fadeIn();
 <div class="row maintext">
   <p>Deeper Vibrations is proud to announce their first release in aid of charity, a sixteen track compilation entitled 'Origin'.</p>
 
-  <p>All tracks on the compilation were chosen from the 'VibeWar' with help from our followers. The VibeWar was a competition that took place between artists within the bass-music scene, who battled it out to create the most beautiful piece of music possible. With so many people enjoying the music created through the VibeWar, Deeper Vibrations saw potential to further the positive effects by creating a compilation, which in turn could help raise money for victims of real wars throughout the world after all music is the universal language of all mankind.</p>
+  <p>All tracks on the compilation were chosen from the 'VibeWar' with help from our followers. The VibeWar was a competition that took place between artists within the bass-music scene, who battled it out to create the most beautiful piece of music possible. With so many people enjoying the music created through the VibeWar, Deeper Vibrations saw potential to further the positive effects by creating a compilation, which in turn could help raise money for victims of real wars throughout the world.</p>
 
   <p>The artists involved generously donated their music to the cause, coming together to produce an outstanding compilation, with a unique mix of inspiring music, with a strong emphasis on bass. The release features a range of artists from established producers, to new talent.</p>
 
@@ -85,7 +85,7 @@ $('.linkting').fadeIn();
     <p>Menik - Contact featuring Zelda Marshal & Emma Lin<br/>
     Anex - Trial & Error<br/>
     Mentha - Sunflower<br/>
-    J.Sparrow - Vibewar Beat<br/>
+    J.Sparrow - Run It Down<br/>
     Karnage & Mark IV - Solitude featuring Erika Roxin<br/>
     Trashbat - Eager Beaver<br/>
     DTR - Bludclot<br/>
