audio added and artwork credit

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ $('.linkting').fadeIn();
     <tr><td>Cat No:</td> <td>DVO001</td></tr>
     <tr><td>Format:</td>   <td>Digital</td></tr>
     <tr><td>Mastered by:</td>  <td>Ten Eight Seven Mastering</td></tr>
+      <tr><td>Artwork by:</td>  <td>Simanion</td></tr>
     </tbody>
   </table>
   </div>
@@ -100,6 +101,7 @@ $('.linkting').fadeIn();
     Duckem & Andromeda S. - Awake<br/><br/><br/></p>
     </div>
   </div>
+  <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/137741306&amp;auto_play=false&amp;hide_related=false&amp;visual=true"></iframe>
 <div class="row">
   <div class="footer">
 
