--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@ $('.linkting').fadeIn();
     Duckem & Andromeda S. - Awake<br/><br/><br/></p>
     </div>
   </div>
-  <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/137741306&amp;auto_play=false&amp;hide_related=false&amp;visual=true"></iframe>
+  
+  <iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/137741306&amp;color=000000&amp;auto_play=false&amp;hide_related=true&amp;show_artwork=false" height="166" width="100%" frameborder="no" scrolling="no" class="soundcloud-iframe"></iframe>
 <div class="row">
   <div class="footer">
 
