sc space and color

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@ $('.linkting').fadeIn();
     Duckem & Andromeda S. - Awake<br/><br/><br/></p>
     </div>
   </div>
-  
-  <iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/137741306&amp;color=000000&amp;auto_play=false&amp;hide_related=true&amp;show_artwork=false" height="166" width="100%" frameborder="no" scrolling="no" class="soundcloud-iframe"></iframe>
+
+  <iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/137741306&amp;color=00cc11&amp;auto_play=false&amp;hide_related=true&amp;show_artwork=false" height="166" width="100%" frameborder="no" scrolling="no" class="soundcloud-iframe"></iframe><br/><br/><br/>
 <div class="row">
   <div class="footer">
 
@@ -110,8 +110,7 @@ $('.linkting').fadeIn();
     <!--<button class="btn"><span class="glyphicon glyphicon-music">  View Release on Bandcamp</span></button>-->
     <ul class="icons">
          <li>  <a class="youtube social" href="http://www.youtube.com/deepervibrations" target="_blank"></a>
-        </li> 
-         
+        </li>
         <li>  <a class="soundcloud social" href="http://www.soundcloud.com/deepervibrations" target="_blank"></a>
         </li>
         <li>  <a class="facebook social" href="http://www.facebook.com/deepervibrations" target="_blank"></a>
