updated button, proper styles :)

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ $('.linkting').fadeIn();
 <div class="row">
   <div class="footer">
 
-    <button class="btn"><a href="deeper_vibrations_origin.pdf" download="deeper_vibrations_origin.pdf"><span class="glyphicon glyphicon-download"> Download PDF</span></a></button>
+    <a href="deeper_vibrations_origin.pdf" class="btn btn-success btn-info" download="deeper_vibrations_origin.pdf"><span class="glyphicon glyphicon-download"> Download PDF</span></a>
     <!--<button class="btn"><span class="glyphicon glyphicon-music">  View Release on Bandcamp</span></button>-->
     <ul class="icons">
          <li>  <a class="youtube social" href="http://www.youtube.com/deepervibrations" target="_blank"></a>
