fixed lint errors, removed jquery, pdf better

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 
 <!-- This line is reserved to wish Peace Love and Happiness to All!-->
 
@@ -21,33 +20,6 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/main.css">
-<!--
-  <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-  <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>-->
-  <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.7.1.min.js"><\/script>')</script>
-
-<script type="text/javascript">
-$(document).ready(function() {
-    var easterEgg = 'vibewar';
-    var eggLength = easterEgg.length;
-    var keyHistory = '';
-    var match;
-        $(document).keypress(function(e) {
-            keyHistory += String.fromCharCode(e.which)
-            match = keyHistory.match(easterEgg); 
-            if(match) {
-snowStorm.toggleSnow();
-console.log('you clever chap!');               
-$('.linkting').fadeIn(); 
-                e.preventDefault();  //stop the browser from following
-    //window.location.href = 'mastered_vibewar_beats.zip';
-	keyHistory = match =  '';
-            } else if (keyHistory.length > 30) {
-                keyHistory = keyHistory.substr((keyHistory.length - eggLength - 1));
-            }
-        });
-});
-</script>
 </head>
 <body>
 <div id="container">
@@ -57,9 +29,9 @@ $('.linkting').fadeIn();
 <p class="linkting" style="display:none;">V I B E W A R!!!</p>
 <h1>Deeper Vibrations: Origin (DVO001)</h1>
 <div class="summary">
-    <img src="img/artwork_final_small.png" class="artwork" width="200" height="200">
+    <img alt="Deeper Vibrations Origin" src="img/artwork_final_small.png" class="artwork" width="200" height="200">
   
-    <table class="table table-bordered table-condensed releasedetails">
+    <table summary="release details" class="table table-bordered table-condensed releasedetails">
     <tbody>
     <tr><td>Title:</td>    <td>Origin</td></tr>
     <tr><td>Label:</td>    <td>Deeper Vibrations</td></tr>
@@ -83,11 +55,11 @@ $('.linkting').fadeIn();
   <p>Deeper Vibrations wanted to help children who through no choice of their own have grown up in a world surrounded by war and conflict. All proceeds are going to WarChild’s programme in Syria, Iraq, Afghanistan, Central African Republic, DR Congo and Uganda.</p><br/>
   <div class="tracklist">
   <h4>Album Tracklist:</h4>
-    <p>Menik - Contact featuring Zelda Marshal & Emma Lin<br/>
-    Anex - Trial & Error<br/>
+    <p>Menik - Contact featuring Zelda Marshal &amp; Emma Lin<br/>
+    Anex - Trial &amp; Error<br/>
     Mentha - Sunflower<br/>
     J.Sparrow - Run It Down<br/>
-    Karnage & Mark IV - Solitude featuring Erika Roxin<br/>
+    Karnage &amp; Mark IV - Solitude featuring Erika Roxin<br/>
     Trashbat - Eager Beaver<br/>
     DTR - Bludclot<br/>
     Tosti - Grow <br/>
@@ -98,14 +70,13 @@ $('.linkting').fadeIn();
     Love The Cook - This One <br/>
     Dillard - Waiting<br/>
     Jeph1 - Cloudwalk<br/>
-    Duckem & Andromeda S. - Awake<br/><br/><br/></p>
+    Duckem &amp; Andromeda S. - Awake<br/><br/><br/></p>
     </div>
   </div>
 
   <iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/137741306&amp;color=00cc11&amp;auto_play=false&amp;hide_related=true&amp;show_artwork=false" height="166" width="100%" frameborder="no" scrolling="no" class="soundcloud-iframe"></iframe><br/><br/><br/>
 <div class="row">
   <div class="footer">
-
     <a href="deeper_vibrations_origin.pdf" class="btn btn-success btn-info" download="deeper_vibrations_origin.pdf"><span class="glyphicon glyphicon-download"> Download PDF</span></a>
     <!--<button class="btn"><span class="glyphicon glyphicon-music">  View Release on Bandcamp</span></button>-->
     <ul class="icons">
