--- a/index.html
+++ b/index.html
@@ -10,27 +10,22 @@
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Deeper Vibrations: Origin</title>
+  <title>Deeper Vibrations: Origin compilation</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
 
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="clearsans_regular_macroman/stylesheet.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 <div id="container">
-<!--
-<p class="linkting" style="display:none;">Downloading...</p>
--->
-<p class="linkting" style="display:none;">V I B E W A R!!!</p>
 <h1>Deeper Vibrations: Origin (DVO001)</h1>
 <div class="summary">
     <img alt="Deeper Vibrations Origin" src="img/artwork_final_small.png" class="artwork" width="200" height="200">
-  
     <table summary="release details" class="table table-bordered table-condensed releasedetails">
     <tbody>
     <tr><td>Title:</td>    <td>Origin</td></tr>
@@ -40,7 +35,7 @@
     <tr><td>Cat No:</td> <td>DVO001</td></tr>
     <tr><td>Format:</td>   <td>Digital</td></tr>
     <tr><td>Mastered by:</td>  <td>Ten Eight Seven Mastering</td></tr>
-      <tr><td>Artwork by:</td>  <td>Simanion</td></tr>
+    <tr><td>Artwork by:</td>  <td>Simanion</td></tr>
     </tbody>
   </table>
   </div>
