updated to add buy button to bandcamp

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
   </table>
   </div>
 
+    <a href="http://deepervibrations.bandcamp.com" target="_blank" class="btn btn-success buybutton"><span class="glyphicon glyphicon-music"></span> Buy Release on Bandcamp</a>
 <div class="row maintext">
   <p>Deeper Vibrations is proud to announce their first release in aid of charity, a sixteen track compilation entitled 'Origin'.</p>
 
@@ -47,7 +48,7 @@
 
   <p>The artists involved generously donated their music to the cause, coming together to produce an outstanding compilation, with a unique mix of inspiring music, with a strong emphasis on bass. The release features a range of artists from established producers, to new talent.</p>
 
-  <p>Deeper Vibrations wanted to help children who through no choice of their own have grown up in a world surrounded by war and conflict. All proceeds are going to War Child’s programme in Syria, Iraq, Afghanistan, Central African Republic, DR Congo and Uganda.</p><br/>
+  <p>Deeper Vibrations wanted to help children who through no choice of their own have grown up in a world surrounded by war and conflict. All proceeds are going to War Child charity, who provide life-changing support to the most vulnerable children whose families, communities and schools have been torn apart by war. The money will fund their programmes in Syria, Iraq, Afghanistan, Central African Republic, DR Congo and Uganda..</p><br/>
   <div class="tracklist">
   <h4>Album Tracklist:</h4>
     <p>Menik - Contact featuring Zelda Marshal &amp; Emma Lin<br/>
@@ -67,12 +68,13 @@
     Jeph1 - Cloudwalk<br/>
     Duckem &amp; Andromeda S. - Awake<br/><br/><br/></p>
     </div>
+
   </div>
 
   <iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/137741306&amp;color=00cc11&amp;auto_play=false&amp;hide_related=true&amp;show_artwork=false" height="166" width="100%" frameborder="no" scrolling="no" class="soundcloud-iframe"></iframe><br/><br/><br/>
 <div class="row">
   <div class="footer">
-    <a href="deeper_vibrations_origin.pdf" class="btn btn-success btn-info" download="deeper_vibrations_origin.pdf"><span class="glyphicon glyphicon-download"> Download PDF</span></a>
+    <a href="deeper_vibrations_origin.pdf" class="btn btn-success btn-info" download="deeper_vibrations_origin.pdf"><span class="glyphicon glyphicon-download"></span> Download PDF Copy</a>
     <!--<button class="btn"><span class="glyphicon glyphicon-music">  View Release on Bandcamp</span></button>-->
     <ul class="icons">
          <li>  <a class="youtube social" href="http://www.youtube.com/deepervibrations" target="_blank"></a>
