--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <meta name="viewport" content="width=device-width">
 
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
+<link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon" /> 
+<link rel="icon" href="img/favicon.ico" type="image/vnd.microsoft.icon" /> 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="clearsans_regular_macroman/stylesheet.css">
@@ -41,8 +42,9 @@
   </div>
 
     <a href="http://deepervibrations.bandcamp.com" target="_blank" class="btn btn-success buybutton"><span class="glyphicon glyphicon-music"></span> Buy Release on Bandcamp</a>
-<div class="row maintext">
-  <p>Deeper Vibrations is proud to announce their first release in aid of charity, a sixteen track compilation entitled 'Origin'.</p>
+<div class="row maintext"><br/>
+  <p><strong>"Origin features a talented crop of producers at their most soulful and in-fitting with the compilation’s theme, creating a tranquil mood across 16 compositions. 
+The lush harmonics, beautifully constructed atmospheres and fluid rhythms embellish the deeply meditative, almost therapeutic bassline pressure each track is built around, and represents the richly enveloping qualities of dubstep at its most creative." </strong></p><br/>
 
   <p>All tracks on the compilation were chosen from the 'VibeWar' with help from our followers. The VibeWar was a competition that took place between artists within the bass-music scene, who battled it out to create the most beautiful piece of music possible. With so many people enjoying the music created through the VibeWar, Deeper Vibrations saw potential to further the positive effects by creating a compilation, which in turn could help raise money for victims of real wars throughout the world.</p>
 
@@ -88,7 +90,7 @@
         <li><a class="googleplus social" href="https://plus.google.com/+DeeperVibrations" target="_blank"></a>
         </li>
       </ul>
-        <p class="address">Deeper Vibrations  |  Redwing, Cusop, Hay-on-Wye, Herefordshire. HR3 5RF  |  Tel: 07581 700 300  |  <a href="mailto:admin@deepervibrations.com">admin@deepervibrations.com</a></p>
+        <p class="address">Deeper Vibrations  |  <a href="http://www.deepervibrations.com">www.deepervibrations.com</a>  |  Tel: 07581 700 300  |  <a href="mailto:admin@deepervibrations.com">admin@deepervibrations.com</a></p>
     </div>
 </div>
 
