--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <meta name="viewport" content="width=device-width">
 
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-<link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon" /> 
-<link rel="icon" href="img/favicon.ico" type="image/vnd.microsoft.icon" /> 
+<link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon" />
+<link rel="icon" href="img/favicon.ico" type="image/vnd.microsoft.icon" />
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="clearsans_regular_macroman/stylesheet.css">
@@ -43,7 +43,7 @@
 
     <a href="http://deepervibrations.bandcamp.com" target="_blank" class="btn btn-success buybutton"><span class="glyphicon glyphicon-music"></span> Buy Release on Bandcamp</a>
 <div class="row maintext"><br/>
-  <p><strong>"Origin features a talented crop of producers at their most soulful and in-fitting with the compilation’s theme, creating a tranquil mood across 16 compositions. 
+  <p><strong>"Origin features a talented crop of producers at their most soulful and in-fitting with the compilation’s theme, creating a tranquil mood across 16 compositions.
 The lush harmonics, beautifully constructed atmospheres and fluid rhythms embellish the deeply meditative, almost therapeutic bassline pressure each track is built around, and represents the richly enveloping qualities of dubstep at its most creative." </strong></p><br/>
 
   <p>All tracks on the compilation were chosen from the 'VibeWar' with help from our followers. The VibeWar was a competition that took place between artists within the bass-music scene, who battled it out to create the most beautiful piece of music possible. With so many people enjoying the music created through the VibeWar, Deeper Vibrations saw potential to further the positive effects by creating a compilation, which in turn could help raise money for victims of real wars throughout the world.</p>
@@ -70,8 +70,15 @@ The lush harmonics, beautifully constructed atmospheres and fluid rhythms embell
     Jeph1 - Cloudwalk<br/>
     Duckem &amp; Andromeda S. - Awake<br/><br/><br/></p>
     </div>
-<iframe style="border: 0; width: 700px; height: 472px;margin:auto;" src="http://bandcamp.com/EmbeddedPlayer/album=1980901653/size=large/bgcol=ffffff/linkcol=2ebd35/artwork=small/transparent=true/" seamless><a href="http://deepervibrations.bandcamp.com/album/origin-charity-compilation">Origin (Charity Compilation) by Deeper Vibrations</a></iframe>
+<iframe style="border: 0; width: 600px; height: 472px;margin:auto;" src="http://bandcamp.com/EmbeddedPlayer/album=1980901653/size=large/bgcol=ffffff/linkcol=2ebd35/artwork=small/transparent=true/" seamless><a href="http://deepervibrations.bandcamp.com/album/origin-charity-compilation">Origin (Charity Compilation) by Deeper Vibrations</a></iframe>
+<div class="press">
+  <p>Press coverage of the Deeper Vibrations release:</p>
+  <p><a href="http://www.fatkidonfire.com/news/origin-dvo001/" target="_blank"><img src="img/fkof.png" alt="FatKidOnFire" title="Fat Kid On Fire Feature"></a></p>
+  <p><a href="http://www.kmag.co.uk/editorial/news/deeper-vibrations-origin.html" target="_blank"><img src="img/kmag.png" alt="KMag" title="KMag Interview/Feature"></a></p>
+  <p><a href="http://www.ukbassmusic.com/app/dubstep/deeper-vibrations-origin-dvo001-review/" target="_blank"><img src="img/ukbass.png" alt="UK Bass Music" title="UK Bass Music Album Review"></a></p>
+  <p><a href="http://bassexplorer.com/" target="_blank"><img class="thin" src="img/bassex.png" alt="Bass Explorer" title="Bass Explorer Feature"></a></p>
   </div>
+</div>
 <!--
   <iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/137741306&amp;color=00cc11&amp;auto_play=false&amp;hide_related=true&amp;show_artwork=false" height="166" width="100%" frameborder="no" scrolling="no" class="soundcloud-iframe"></iframe>i--><br/><br/><br/>
 <div class="row">
@@ -84,7 +91,7 @@ The lush harmonics, beautifully constructed atmospheres and fluid rhythms embell
         <li>  <a class="soundcloud social" href="http://www.soundcloud.com/deepervibrations" target="_blank"></a>
         </li>
         <li>  <a class="facebook social" href="http://www.facebook.com/deepervibrations" target="_blank"></a>
-        </li> 
+        </li>
          <li>  <a class="twitter social" href="http://www.twitter.com/deep_vibrations" target="_blank"></a>
         </li>
         <li><a class="googleplus social" href="https://plus.google.com/+DeeperVibrations" target="_blank"></a>
