iframe center fix

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ The lush harmonics, beautifully constructed atmospheres and fluid rhythms embell
     Jeph1 - Cloudwalk<br/>
     Duckem &amp; Andromeda S. - Awake<br/><br/><br/></p>
     </div>
-<iframe style="border: 0; width: 600px; height: 472px;margin:auto;" src="http://bandcamp.com/EmbeddedPlayer/album=1980901653/size=large/bgcol=ffffff/linkcol=2ebd35/artwork=small/transparent=true/" seamless><a href="http://deepervibrations.bandcamp.com/album/origin-charity-compilation">Origin (Charity Compilation) by Deeper Vibrations</a></iframe>
+<iframe style="border: 0; width: 600px; height: 472px; margin:auto; display:block;" src="http://bandcamp.com/EmbeddedPlayer/album=1980901653/size=large/bgcol=ffffff/linkcol=2ebd35/artwork=small/transparent=true/" seamless><a href="http://deepervibrations.bandcamp.com/album/origin-charity-compilation">Origin (Charity Compilation) by Deeper Vibrations</a></iframe>
 <div class="press">
   <p>Press coverage of the Deeper Vibrations release:</p>
   <p><a href="http://www.fatkidonfire.com/news/origin-dvo001/" target="_blank"><img src="img/fkof.png" alt="FatKidOnFire" title="Fat Kid On Fire Feature"></a></p>
