--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ The lush harmonics, beautifully constructed atmospheres and fluid rhythms embell
   <p><a href="http://www.fatkidonfire.com/news/origin-dvo001/" target="_blank"><img src="img/fkof.png" alt="FatKidOnFire" title="Fat Kid On Fire Feature"></a></p>
   <p><a href="http://www.kmag.co.uk/editorial/news/deeper-vibrations-origin.html" target="_blank"><img src="img/kmag.png" alt="KMag" title="KMag Interview/Feature"></a></p>
   <p><a href="http://www.ukbassmusic.com/app/dubstep/deeper-vibrations-origin-dvo001-review/" target="_blank"><img src="img/ukbass.png" alt="UK Bass Music" title="UK Bass Music Album Review"></a></p>
-  <p><a href="http://bassexplorer.com/" target="_blank"><img class="thin" src="img/bassex.png" alt="Bass Explorer" title="Bass Explorer Feature"></a></p>
+  <p><a href="http://bassexplorer.com/review-deeper-vibrations-origin-compilation/" target="_blank"><img class="thin" src="img/bassex.png" alt="Bass Explorer" title="Bass Explorer Feature"></a></p>
   </div>
 </div>
 <!--
