added footer link to cc ;

--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@ The lush harmonics, beautifully constructed atmospheres and fluid rhythms embell
         <li><a class="googleplus social" href="https://plus.google.com/+DeeperVibrations" target="_blank"></a>
         </li>
       </ul>
-        <p class="address">Deeper Vibrations  |  <a href="http://www.deepervibrations.com">www.deepervibrations.com</a>  |  Tel: 07581 700 300  |  <a href="mailto:admin@deepervibrations.com">admin@deepervibrations.com</a></p>
+        <p class="address">Deeper Vibrations  |  <a href="http://www.deepervibrations.com">www.deepervibrations.com</a>  |  <a href="mailto:admin@deepervibrations.com">admin@deepervibrations.com</a></p>
     </div>
 </div>
-
+<p class="ultra-small">Website created by <a href="http://www.consciouscreative.co.uk">Conscious Creative</a></p>
 </div>
 </body>
 </html>
